--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@project-serum/anchor": "^0.16.1",
     "@solana/wallet-adapter-base": "^0.6.0",
     "@solana/wallet-adapter-material-ui": "^0.12.1",
