--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-    "dependencies": {
-        "@project-serum/anchor": "^0.16.0"
-    },
-    "devDependencies": {
-        "chai": "^4.3.4",
-        "mocha": "^9.0.3"
-    }
+  "dependencies": {
+    "@project-serum/anchor": "^0.16.0",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.0.3"
+  },
+  "scripts": {
+    "start": "node index.js"
+  }
 }
